<resources>
    <string name="subtype_hu_ZZ">Hungarian (QUERTY)</string>
    <string name="config_default_keyboard_theme_index">5</string>
    <string name="spellchecker_recommended_threshold_value">0.11</string>
    <string name="spellchecker_suggestion_threshold_value">0.03</string>
    <string name="suggested_punctuations">"!,?,\\,,:,;,\",(,),',-,/,@,_"</string>
    <string name="weak_space_swapping_symbols">.,;:!?)]}</string>
    <string name="weak_space_stripping_symbols">"\u0009 
/_'-@\""</string>
    <string name="phantom_space_promoting_symbols">([*&amp;{&lt;>+=|</string>
    <string name="symbols_excluded_from_word_separators">"'-"</string>
    <string name="layout_switch_back_symbols" />
    <string name="prefs_suggestion_visibility_show_value">0</string>
    <string name="prefs_suggestion_visibility_show_only_portrait_value">1</string>
    <string name="prefs_suggestion_visibility_hide_value">2</string>
    <string name="prefs_suggestion_visibility_default_value">0</string>
    <string name="auto_correction_threshold_mode_index_off">0</string>
    <string name="auto_correction_threshold_mode_index_modest">1</string>
    <string name="auto_correction_threshold_mode_index_aggeressive">2</string>
    <string name="auto_correction_threshold_mode_index_very_aggeressive">3</string>
    <string name="voice_mode_main">0</string>
    <string name="voice_mode_symbols">1</string>
    <string name="voice_mode_off">2</string>
    <string name="english_ime_debug_settings">Android keyboard Debug settings</string>
    <string name="prefs_debug_mode">Debug Mode</string>
    <string name="prefs_force_non_distinct_multitouch">Force non-distinct multitouch</string>
    <string name="layout_basic">Basic</string>
    <string name="layout_high_contrast">Basic (High Contrast)</string>
    <string name="layout_stone_bold">Stone (bold)</string>
    <string name="layout_stone_normal">Stone (normal)</string>
    <string name="layout_gingerbread">Gingerbread</string>
    <string name="layout_ics">IceCreamSandwich</string>
    <string name="subtype_generic">%s</string>
    <string name="subtype_generic_qwerty">%s (QWERTY)</string>
    <string name="subtype_generic_qwertz">%s (QWERTZ)</string>
    <string name="subtype_generic_azerty">%s (AZERTY)</string>
    <string name="subtype_generic_dvorak">%s (Dvorak)</string>
    <string name="subtype_generic_colemak">%s (Colemak)</string>
    <string name="subtype_generic_pcqwerty">%s (PC)</string>
    <string name="subtype_bulgarian_bds">%s (BDS)</string>
    <string name="dictionary_pack_package_name">com.google.android.inputmethod.latin.dictionarypack</string>
    <string name="dictionary_pack_settings_activity">com.google.android.inputmethod.latin.dictionarypack.DictionarySettingsActivity</string>
    <string name="settings_ms">ms</string>
    <string name="settings_warning_researcher_mode">Attention! You are using the special keyboard for research purposes.</string>
    <string name="research_splash_content" />
    <string name="english_ime_name">Android keyboard</string>
    <string name="spell_checker_service_name">Android spell checker</string>
    <string name="english_ime_settings">Android keyboard settings</string>
    <string name="android_spell_checker_settings">Spell checking settings</string>
    <string name="aosp_android_keyboard_ime_name">Android keyboard (AOSP)</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="english_ime_research_log">Research Log Commands</string>
    <string name="aosp_spell_checker_service_name">Android spell checker (AOSP)</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="general_category">General</string>
    <string name="correction_category">Text correction</string>
    <string name="gesture_typing_category">Gesture typing</string>
    <string name="misc_category">Other options</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="advanced_settings_summary">Options for experts</string>
    <string name="include_other_imes_in_language_switch_list">Switch to other input methods</string>
    <string name="include_other_imes_in_language_switch_list_summary">Language switch key covers other input methods too</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="show_language_switch_key_summary">Show when multiple input languages are enabled</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_suggestion_visibility_show_name">Always show</string>
    <string name="prefs_suggestion_visibility_show_only_portrait_name">Show in portrait mode</string>
    <string name="prefs_suggestion_visibility_hide_name">Always hide</string>
    <string name="auto_correction">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggeressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggeressive">Very aggressive</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="added_word">%s : Saved</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_previous_key">Prev</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_to_alpha_key">ABC</string>
    <string name="label_to_symbol_key">\?123</string>
    <string name="label_to_symbol_with_microphone_key">123</string>
    <string name="label_pause_key">Pause</string>
    <string name="label_wait_key">Wait</string>
    <string name="spoken_use_headphones">Plug in a headset to hear password keys spoken aloud.</string>
    <string name="spoken_current_text_is">Current text is %s</string>
    <string name="spoken_no_text_entered">No text entered</string>
    <string name="spoken_description_unknown">Key code %d</string>
    <string name="spoken_description_shift">Shift</string>
    <string name="spoken_description_shift_shifted">Shift on (tap to disable)</string>
    <string name="spoken_description_caps_lock">Caps lock on (tap to disable)</string>
    <string name="spoken_description_delete">Delete</string>
    <string name="spoken_description_to_symbol">Symbols</string>
    <string name="spoken_description_to_alpha">Letters</string>
    <string name="spoken_description_to_numeric">Numbers</string>
    <string name="spoken_description_settings">Settings</string>
    <string name="spoken_description_tab">Tab</string>
    <string name="spoken_description_space">Space</string>
    <string name="spoken_description_mic">Voice input</string>
    <string name="spoken_description_smiley">Smiley face</string>
    <string name="spoken_description_return">Return</string>
    <string name="spoken_description_search">Search</string>
    <string name="spoken_description_dot">Dot</string>
    <string name="spoken_description_language_switch">Switch language</string>
    <string name="spoken_description_action_next">Next</string>
    <string name="spoken_description_action_previous">Previous</string>
    <string name="spoken_description_shiftmode_on">Shift enabled</string>
    <string name="spoken_description_shiftmode_locked">Caps lock enabled</string>
    <string name="spoken_description_shiftmode_off">Shift disabled</string>
    <string name="spoken_description_mode_symbol">Symbols mode</string>
    <string name="spoken_description_mode_alpha">Letters mode</string>
    <string name="spoken_description_mode_phone">Phone mode</string>
    <string name="spoken_description_mode_phone_shift">Phone symbols mode</string>
    <string name="voice_input">Voice input key</string>
    <string name="voice_input_modes_main_keyboard">On main keyboard</string>
    <string name="voice_input_modes_symbols_keyboard">On symbols keyboard</string>
    <string name="voice_input_modes_off">Off</string>
    <string name="voice_input_modes_summary_main_keyboard">Mic on main keyboard</string>
    <string name="voice_input_modes_summary_symbols_keyboard">Mic on symbols keyboard</string>
    <string name="voice_input_modes_summary_off">Voice input is disabled</string>
    <string name="configure_input_method">Configure input methods</string>
    <string name="language_selection_title">Input languages</string>
    <string name="research_do_not_log_this_session">Suspend logging</string>
    <string name="research_enable_session_logging">Enable logging</string>
    <string name="research_notify_session_log_deleting">Deleting session log</string>
    <string name="research_notify_logging_suspended">Logging temporarily suspended. To disable permanently, go to Android Keyboard Settings</string>
    <string name="research_notify_session_log_not_deleted">Session log NOT deleted</string>
    <string name="research_notify_session_logging_enabled">Session logging enabled</string>
    <string name="research_feedback_menu_option">Send feedback</string>
    <string name="research_feedback_dialog_title">Send feedback</string>
    <string name="research_feedback_include_history_label">Include last %d words entered</string>
    <string name="research_feedback_hint">Enter your feedback here.</string>
    <string name="research_feedback_send">Send</string>
    <string name="research_feedback_cancel">Cancel</string>
    <string name="prefs_enable_log">Enable user feedback</string>
    <string name="prefs_description_log">Help improve this input method editor by automatically sending usage statistics and crash reports to Google.</string>
    <string name="keyboard_layout">Keyboard theme</string>
    <string name="custom_input_styles_title">Custom input styles</string>
    <string name="prefs_usability_study_mode">Usability study mode</string>
    <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration settings</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume settings</string>
</resources>