<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/prefs_debug_mode" android:key="english_ime_debug_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="true" android:title="@string/prefs_enable_log" android:key="enable_logging" android:summary="@string/prefs_description_log" android:defaultValue="false" />
    <ListPreference android:persistent="true" android:entries="@array/keyboard_layout_modes" android:title="@string/keyboard_layout" android:key="pref_keyboard_layout_20110916" android:defaultValue="@string/config_default_keyboard_theme_index" android:entryValues="@array/keyboard_layout_modes_values" />
    <CheckBoxPreference android:persistent="true" android:title="@string/prefs_debug_mode" android:key="debug_mode" android:defaultValue="false" />
    <CheckBoxPreference android:persistent="true" android:title="@string/prefs_force_non_distinct_multitouch" android:key="force_non_distinct_multitouch" android:defaultValue="false" />
    <CheckBoxPreference android:persistent="true" android:title="@string/prefs_usability_study_mode" android:key="usability_study_mode" android:defaultValue="false" />
</PreferenceScreen>