<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.android.internal.widget.DialogTitle android:ellipsize="end" android:gravity="left|center" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/research_feedback_dialog_title" android:singleLine="true" style="?android:attr/windowTitleStyle" />
        <View android:background="@*android:color/holo_blue_light" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    </LinearLayout>
    <EditText android:layout_gravity="fill_horizontal|center" android:id="@id/research_feedback_contents" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:hint="@string/research_feedback_hint" android:lines="2" android:inputType="textMultiLine" android:imeOptions="flagNoFullscreen">
        <requestFocus />
    </EditText>
    <CheckBox android:id="@id/research_feedback_include_history" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:checked="true" android:text="@string/research_feedback_include_history_label" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="?android:dividerHorizontal" android:showDividers="beginning" android:dividerPadding="0.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:measureWithLargestChild="true" style="?android:attr/buttonBarStyle">
            <Button android:textSize="14.0sp" android:layout_gravity="left" android:id="@id/research_feedback_cancel_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/research_feedback_cancel" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
            <Button android:textSize="14.0sp" android:layout_gravity="right" android:id="@id/research_feedback_send_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/research_feedback_send" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>